base/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9696
